# discovery

src/05-led-roulette/: Cargo.toml
src/05-led-roulette/src/: main.rs
src/06-hello-world/: openocd.gdb
src/07-registers/: openocd.gdb
