[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "led-roulette"
version = "0.1.0"

[dependencies]
#aux5 = { path = "auxiliary" }
cortex-m-semihosting = "*"
cortex-m = "*"
cortex-m-rt = "*"
panic-semihosting = "*"

[dependencies.stm32f3]
version = "0.6.0"
features = ["stm32f303", "rt"]